@@ -1,5 +1,6 @@
 package net.minecraft.client.realms.exception;
 
+import java.util.Locale;
 import javax.annotation.Nullable;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
@@ -31,9 +32,9 @@ public class RealmsServiceException extends Exception {
 		if (this.error != null) {
 			String string = "mco.errorMessage." + this.error.getErrorCode();
 			String string2 = I18n.hasTranslation(string) ? I18n.translate(string) : this.error.getErrorMessage();
-			return "Realms service error (%d/%d) %s".formatted(this.httpResultCode, this.error.getErrorCode(), string2);
+			return String.format(Locale.ROOT, "Realms service error (%d/%d) %s", this.httpResultCode, this.error.getErrorCode(), string2);
 		} else {
-			return "Realms service error (%d) %s".formatted(this.httpResultCode, this.httpResponseText);
+			return String.format(Locale.ROOT, "Realms service error (%d) %s", this.httpResultCode, this.httpResponseText);
 		}
 	}
 
