@@ -23,6 +23,7 @@ import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Enumeration;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -171,7 +172,7 @@ public class DefaultResourcePack implements ResourcePack {
 				String string2 = path.relativize(pathx).toString().replaceAll("\\\\", "/");
 				Identifier identifier = Identifier.of(namespace, string2);
 				if (identifier == null) {
-					Util.error("Invalid path in datapack: %s:%s, ignoring".formatted(namespace, string2));
+					Util.error(String.format(Locale.ROOT, "Invalid path in datapack: %s:%s, ignoring", namespace, string2));
 				} else {
 					consumer.accept(identifier);
 				}
